--- a/ADANET_FRAMEWORK/App.config
+++ b/ADANET_FRAMEWORK/App.config
@@ -3,7 +3,7 @@
 
   <connectionStrings>
     <add name="Default"
-         connectionString="Server=(LocalDb)\MSSQLLocalDB;Database=BlaBlaMart;Trusted_Connection=True;"
+         connectionString="Server=(LocalDb)\MSSQLLocalDB;Database=BlaBlaMartDb;Trusted_Connection=True;"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
 
