--- a/ADANET_FRAMEWORK/App.config
+++ b/ADANET_FRAMEWORK/App.config
@@ -7,6 +7,15 @@
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
 
+	<appSettings>
+		<add key="InsertUser" value="INSERT INTO [dbo].[User]
+                                                        ([Name]
+                                                        ,[Age])
+                                                  VALUES
+                                                        (@Name
+                                                        ,@Age);"/>
+	</appSettings>
+	
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
   </startup>
