--- a/ADANET_FRAMEWORK/ADANET_FRAMEWORK.csproj
+++ b/ADANET_FRAMEWORK/ADANET_FRAMEWORK.csproj
@@ -66,6 +66,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\FactoryHelper.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
